# rust-py-miio

./: .gitignore  Cargo.toml  LICENSE.md  README.md  run.sh
python-src/: constants.py  miio_interface.py
src/: constants.rs  lib.rs
