[package]
name = "rust-py-miio"
version = "0.1.1"
edition = "2021"
authors = ["Juan Calzada <calzadaj@hotmail.es>"]
description = "A Rust interface to interact with Miio devices via Python using PyO3."
license = "MIT"
repository = "https://github.com/juancabe/rust-py-miio"
homepage = "https://github.com/juancabe/rust-py-miio"
documentation = "https://docs.rs/rust-py-miio"
keywords = ["rust", "miio", "pyo3", "integration"]
categories = ["api-bindings", "external-ffi-bindings", "gui"]
exclude = ["/python-src/__pycache__", "/.gitignore"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["auto-initialize"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"